--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -1,10 +1,10 @@
 <!doctype html>
 <head>
 	<title>D3Up.com</title>
+	<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.21/themes/base/jquery-ui.css" type="text/css" charset="utf-8">	
 	<link rel="stylesheet" href="/css/style.css" type="text/css" charset="utf-8">	
 	<link rel="stylesheet" href="/css/select2.css" type="text/css" charset="utf-8">	
 	<link rel="stylesheet" href="/css/tooltip.css" type="text/css" charset="utf-8">	
-	<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.21/themes/base/jquery-ui.css" type="text/css" charset="utf-8">	
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.2.js"></script>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.js"></script>
 	<script type="text/javascript" src="/js/select2.js"></script>
@@ -16,13 +16,14 @@
 		<ul id="navigation">
 			<li><a href="/">Home</a></li>
 			<li><a href="/item/create">Create Item</a></li>
-			<!-- <li><a href="/user/heroes">My Heroes</a></li> -->
+			<li><a href="/user/heroes">My Heroes</a></li>
+			<li><a href="/user/items">My Items</a></li>
 			<? if($profile = Epic_Auth::getInstance()->getProfile()): ?>
 				<!-- <li><a href="/user"><?= $profile->username ?></a></li>	 -->
 				<li><a href="/user/logout">Logout</a></li>
 			<? else: ?>
-				<!-- <li><a href="/user/login">Login</a></li>
-				<li><a href="/user/register">Register</a></li> -->
+				<li><a href="/user/login">Login</a></li>
+				<li><a href="/user/register">Register</a></li>
 			<? endif; ?>
 		</ul>
 		<div id="main">
