--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -16,14 +16,14 @@
 		<ul id="navigation">
 			<li><a href="/">Home</a></li>
 			<li><a href="/item/create">Create Item</a></li>
-			<!-- <li><a href="/user/heroes">My Heroes</a></li> -->
-			<!-- <li><a href="/user/items">My Items</a></li> -->
+			<li><a href="/user/heroes">My Heroes</a></li>
+			<li><a href="/user/items">My Items</a></li>
 			<? if($profile = Epic_Auth::getInstance()->getProfile()): ?>
 				<!-- <li><a href="/user"><?= $profile->username ?></a></li>	 -->
-				<!-- <li><a href="/user/logout">Logout</a></li> -->
+				<li><a href="/user/logout">Logout</a></li>
 			<? else: ?>
-				<!-- <li><a href="/user/login">Login</a></li> -->
-				<!-- <li><a href="/user/register">Register</a></li> -->
+				<li><a href="/user/login">Login</a></li>
+				<li><a href="/user/register">Register</a></li>
 			<? endif; ?>
 		</ul>
 		<div id="main">
