--- a/application/views/scripts/user/items.phtml
+++ b/application/views/scripts/user/items.phtml
@@ -8,7 +8,7 @@
 	<? if(count($this->items->export())):?>
 	<ul>
 		<? foreach($this->items as $item): ?>
-			<li><?= $this->itemLink($item) ?> (<?= ucwords(str_replace("-", " ", $item->type)) ?>)</li>
+			<li><?= $this->itemLink($item) ?> (<?= ucwords(str_replace("-", " ", $item->type)) ?>) - <?= $this->itemLink($item, array('action' => 'edit', 'text' => 'Edit')) ?></li>
 		<? endforeach ?>
 	</ul>
 	<? else: ?>
