Added Diff to the header and swapped back minified.

--- a/application/views/scripts/record/hero.phtml
+++ b/application/views/scripts/record/hero.phtml
@@ -141,4 +141,4 @@
 	</fieldset>
 	</form>
 </div>
-<script type="text/javascript" src="/js/fullcalc.js"></script>
+<script type="text/javascript" src="/js/calc.js"></script>
