--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -9,6 +9,7 @@
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.js"></script>
 	<script type="text/javascript" src="/js/select2.js"></script>
 	<script type="text/javascript" src="/js/tooltip.js"></script>
+	<script type="text/javascript" src="/js/jquery.diff.js"></script>
 </head>
 <body>
 	<div id="wrapper">
