Improved calc a bit and changed up homepage.

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -14,9 +14,13 @@
 <div class="home">
 	<div class="info">
 		<h2>What is D3Up?</h2>
-		<p>D3Up is designed to be an incredibly simple tool that allows you to share information about items from Diablo 3.</p>
-		<h2>What is it for?</h2>
-		<p>Use it to create examples of items you have, you're using, that you want to sell or that you wish existed!</p>
+		<p>D3Up is designed as a tool to help you find information about items, a place to create a character profile, and compare items to determine which stats of yours will change.</p>
+		<h2>What can I do here?</h2>
+		<ul>
+			<li><a href="/item/create">Create Items</a> to share with others.</li>
+			<li>Make <a href="/hero/create">character profiles</a> with detailed statistics!</li>
+			<li>Compare the items you're wearing to other items you've created.</li>
+		</ul>
 	</div>
 	<div class="recent-items">
 		<h2>Recently Created Items</h2>
