--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -27,6 +27,9 @@
 				<li><a href="/user/register">Register</a></li>
 			<? endif; ?>
 		</ul>
+		<div id="sys-message">
+			<b>System Message</b>: Thank you all for helping test, I hope you're enjoying the app so far. Please submit feedback/bugs/complains/praise/whatever on the <a href="http://www.reddit.com/r/Diablo/comments/vpetk/ready_for_testers_item_comparison_character/">/r/diablo post</a> for now, or you can email me directly at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>. 
+		</div>
 		<div id="main">
 			<div id="content">
 				<?= $this->layout()->content ?>
