Added stats to the homepage.

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -21,6 +21,11 @@
 			<li>Make <a href="/hero/create">character profiles</a> with detailed statistics!</li>
 			<li>Compare the items you're wearing to other items you've created.</li>
 		</ul>
+		<h2>Stats</h2>
+		<ul>
+			<li><?= $this->counts['items']?> items</li>
+			<li><?= $this->counts['heroes']?> heroes</li>
+		</ul>
 	</div>
 	<div class="recent-items">
 		<h2>Recently Created Items</h2>
