Moved Heroes -> Builds. Added Passives Skills and Calculations to the Calculator. Revamped layout to reflect the build change. Added Indexes to the Schema

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -17,7 +17,7 @@
 		<ul id="navigation">
 			<li><a href="/">Home</a></li>
 			<li><a href="/item/create">Create Item</a></li>
-			<li><a href="/user/heroes">My Heroes</a></li>
+			<li><a href="/user/builds">My Builds</a></li>
 			<li><a href="/user/items">My Items</a></li>
 			<? if($profile = Epic_Auth::getInstance()->getProfile()): ?>
 				<!-- <li><a href="/user"><?= $profile->username ?></a></li>	 -->
