--- a/application/views/scripts/item/create.phtml
+++ b/application/views/scripts/item/create.phtml
@@ -29,7 +29,7 @@
 		<?= $this->form ?>
 	</div>
 </form>
-<script type="text/javascript" src="/js/item.js"></script>
+<script type="text/javascript" src="/js/fullitem.js"></script>
 <script type="text/javascript">
 <? if(!empty($_POST)): ?>
 var post = <?= json_encode($_POST) ?>;
