--- a/application/views/scripts/record/view.phtml
+++ b/application/views/scripts/record/view.phtml
@@ -1,6 +1,6 @@
 <? if($this->record->_type == 'item'): ?>
 	<?= $this->render('record/item.phtml') ?>
 <? endif; ?>
-<? if($this->record->_type == 'hero'): ?>
-	<?= $this->render('record/hero.phtml') ?>
+<? if($this->record->_type == 'build'): ?>
+	<?= $this->render('record/build.phtml') ?>
 <? endif; ?>
