--- a/application/views/scripts/user/items.phtml
+++ b/application/views/scripts/user/items.phtml
@@ -5,12 +5,15 @@
 	<p>Interested? Feel free to wander over to the <a href="/user/register">registration page</a> to create an account, or if you already have one, you can <a href="/user/login">login</a>.</p>
 <? else: ?>
 	<p><a href="/item/create">Add Item</a></p>
-	<? if(count($this->items->export())):?>
+	<? if($this->items->count()):?>
 	<ul>
 		<? foreach($this->items as $item): ?>
 			<li><?= $this->itemLink($item) ?> (<?= ucwords(str_replace("-", " ", $item->type)) ?>) - <?= $this->itemLink($item, array('action' => 'edit', 'text' => 'Edit')) ?></li>
 		<? endforeach ?>
 	</ul>
+	<?php echo $this->paginationControl($this->items,
+	                                    'Elastic',
+	                                    'index/_pages.phtml'); ?>
 	<? else: ?>
 	<p>You don't have any items yet!</p>
 	<p>Click the "Add Item" button above to get started.</p>
