--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -185,3 +185,16 @@ ul#navigation li {
 #base_armor-label, #base_armor-element {
 	display: none;
 }
+.skill-highlight {
+	color: #0F0;
+}
+#passive-display {
+	list-style: none;
+	margin: 20px 10px;
+	padding: 0;
+}
+#passive-display > li {
+	border: 1px solid #777;
+	padding: 5px;
+	margin: 10px 0;
+}
