Final pieces of the Hero -> Build convert.

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -18,7 +18,7 @@
 		<h2>What can I do here?</h2>
 		<ul>
 			<li><a href="/item/create">Create Items</a> to share with others or add to your builds.</li>
-			<li>Create <a href="/hero/create">Character Builds</a>, complete with gear, skills and detailed statistics!</li>
+			<li>Create <a href="/build/create">Character Builds</a>, complete with gear, skills and detailed statistics!</li>
 			<li>Compare the items in your build to other items you've created.</li>
 		</ul>
 		<h2>Stats</h2>
