--- a/application/views/scripts/user/builds.phtml
+++ b/application/views/scripts/user/builds.phtml
@@ -1,10 +1,10 @@
-<h3>My Heroes</h3>
+<h3>My Character Builds</h3>
 <? if($this->notLoggedIn): ?>
 	<p>This feature is only available to logged in users due to the nature of the application.</p>
-	<p>When logged in, the database will save your characters as well as the gear you are wearing, allowing you to quickly compare items against your current gear. Detailed statistics about your character will also be generated allowing you to make informed decisions about gear changes without actually having to purchase the gear itself.</p>
+	<p>When logged in, the database will save your character builds, the gear you choose to wear, the skills you use and more. This allows you to quickly compare items against your current gear, with detailed stats about your character immediately generated allowing you to make informed decisions about gear changes without actually having to purchase the gear itself.</p>
 	<p>Interested? Feel free to wander over to the <a href="/user/register">registration page</a> to create an account, or if you already have one, you can <a href="/user/login">login</a>.</p>
 <? else: ?>
-	<p><a href="/hero/create">Add Hero</a></p>
+	<p><a href="/build/create">Add Character Build</a></p>
 	<? if($this->builds->count()):?>
 	<ul>
 		<? foreach($this->builds as $build): ?>
