Updated system message.

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -28,7 +28,7 @@
 			<? endif; ?>
 		</ul>
 		<div id="sys-message">
-			<b>System Message</b>: Thank you all for helping test, I hope you're enjoying the app so far. Please submit feedback/bugs/complains/praise/whatever on the <a href="http://www.reddit.com/r/Diablo/comments/vpetk/ready_for_testers_item_comparison_character/">/r/diablo post</a> for now, or you can email me directly at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>. 
+			<b>System Message</b>: Update #3 Deployed - Effective Health (EHP), Monster Levels and some GUI Improvements, <a href="http://www.reddit.com/r/Diablo/comments/vpetk/ready_for_testers_item_comparison_character/">read more</a>. Please submit feedback/bugs/complains/praise/whatever on the <a href="http://www.reddit.com/r/Diablo/comments/vpetk/ready_for_testers_item_comparison_character/">/r/diablo post</a> for now, or you can email me directly at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>. Thanks!
 		</div>
 		<div id="main">
 			<div id="content">
